libraries/ckit/regression/valid-programs/a100.c
struct sigevent;

extern int timer_create(struct sigevent *);

main () {
  return 0;
}

