libraries/ckit/regression/invalid-programs/r31.c
struct X aa;

struct X {
 struct X x;
 int y;
};

main() {
 return(0);
}
